@@ -48,7 +48,7 @@ const char* HUNSPELL_VERSION = "1.6.1";
 const char* BEEBEEP_VERSION = "5.4.3";
 const int BEEBEEP_PROTO_VERSION = 74;
 const int BEEBEEP_SETTINGS_VERSION = 11;
-const int BEEBEEP_BUILD = 1051;
+const int BEEBEEP_BUILD = 1052;
 
 #endif // BEEBEEP_VERSION_H
 
